# renote

./: .gitignore  CMakeLists.txt
gui/: ribbon.ui
src/: renote.c
src/gui/: window.c
